# lintai

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  action.yml  entrypoint.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
lintai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
llm_validator/: __init__.py  __main__.py  assertions.py  cli.py  core.py  models.py
llm_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
self_created_tools/: test_action.py
tests/: test_core.py
validators/: code_review.yaml  examples.py  sales_plan.yaml
