[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-validator"
version = "0.1.0"
description = "AI-powered linting tool for code quality and validation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arush Kali", email = "warush23@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.scripts]
lintai = "llm_validator.cli:cli"

[project.urls]
Homepage = "https://github.com/SoulSniper-V2/lintai"
Repository = "https://github.com/SoulSniper-V2/lintai"
Issues = "https://github.com/SoulSniper-V2/lintai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_validator*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
